# swagger/swagger.json
@@ -90,15 +90,6 @@
             "schema": {
               "type": "integer"
             }
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "description": "JWT token",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "security": [
@@ -153,6 +144,69 @@
           }
         }
       }
+    },
+    "/api/QuanLyNguoiDung/themNguoiDung": {
+      "post": {
+        "summary": "Create a new user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "taiKhoan": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  },
+                  "soDT": {
+                    "type": "string"
+                  },
+                  "matKhau": {
+                    "type": "string"
+                  },
+                  "hoTen": {
+                    "type": "string"
+                  },
+                  "diem": {
+                    "type": "integer"
+                  }
+                },
+                "required": [
+                  "taiKhoan",
+                  "email",
+                  "soDT",
+                  "matKhau",
+                  "hoTen",
+                  "diem"
+                ]
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "User created successfully"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
+    
   }
 }
